--- a/Super-Malario.vcxproj
+++ b/Super-Malario.vcxproj
@@ -72,14 +72,16 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\Vitor\Source\Repos\Vaan96\Super-Malario\Super-Malario\SDL\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Vitor\Source\Repos\Vaan96\Super-Malario\Super-Malario\SDL\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Vitor\source\repos\Vaan96\Super-Malario\SDL\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Vitor\source\repos\Vaan96\Super-Malario\SDL\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>C:\Users\Vitor\source\repos\Vaan96\Super-Malario\SDL\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Vitor\source\repos\Vaan96\Super-Malario\SDL\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -125,6 +127,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
